# native_lib_loader

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: run_tests.yaml
doc/: main.md  requirements.txt
doc/source/: conf.py  index.rst
doc/source/API/: index.rst
doc/source/reference/: background.md  design.md  index.rst  solutions.md
native_lib_loader/: __init__.py
native_lib_loader/consumer/: __init__.py  loader.py
pkgs/shared_lib_consumer/: README.md  pyproject.toml  shared_lib_consumer.py
pkgs/shared_lib_manager/: README.md  pyproject.toml  shared_lib_manager.py
tests/basic_lib/libexample/: pyproject.toml
tests/basic_lib/libexample/libexample/: load.py
tests/basic_lib/libexample/libexample/cpp/: example.c
tests/basic_lib/pylibexample/pylibexample/: __init__.py
tests/generated_projects/: conftest.py  generator.py  monkeypatch.py  test_generated_projects.py  test_packages.py
tests/generated_projects/templates/: cpp_CMakeLists.txt  cpp___init__.py  cpp_config.cmake.in  cpp_py_CMakeLists.txt  cpp_pyproject.toml  example.c  example.h  load.py  py_CMakeLists.txt  py___init__.py  py_pyproject.toml  pylibexample.c
tests/specific/linux/global_symbols/: Makefile  main.c
tests/specific/linux/global_symbols/a/: foo.c
tests/specific/linux/global_symbols/b/: bar.c
tests/specific/linux/loader_identical/: Makefile  main.c  main_osx.c
tests/specific/linux/loader_identical/b/: foo.c
tests/specific/linux/loader_identical/c/: bar.c
tests/two_identical_libs/libexample1/: CMakeLists.txt  pyproject.toml
tests/two_identical_libs/libexample1/libexample1/: __init__.py  load.py
tests/two_identical_libs/libexample1/libexample1/cpp/: CMakeLists.txt
tests/two_identical_libs/libexample2/: CMakeLists.txt  pyproject.toml
tests/two_identical_libs/libexample2/libexample2/cpp/: example.c
tests/two_identical_libs/libexample2/libexample2/cpp/cmake/: config.cmake.in
tests/two_identical_libs/pylibexample1/: CMakeLists.txt  pyproject.toml
tests/two_identical_libs/pylibexample1/pylibexample1/: __init__.py  pylibexample1.c
tests/two_identical_libs/pylibexample2/: CMakeLists.txt  pyproject.toml
tests/two_identical_libs/pylibexample2/pylibexample2/: __init__.py  pylibexample2.c
tests/two_libs/libbar/: CMakeLists.txt  pyproject.toml
tests/two_libs/libbar/libbar/: load.py
tests/two_libs/libbar/libbar/cpp/: CMakeLists.txt  bar.c
tests/two_libs/libbar/libbar/cpp/cmake/: config.cmake.in
tests/two_libs/libfoo/: CMakeLists.txt  pyproject.toml
tests/two_libs/libfoo/libfoo/: load.py
tests/two_libs/libfoo/libfoo/cpp/: CMakeLists.txt  foo.c
tests/two_libs/libfoo/libfoo/cpp/cmake/: config.cmake.in
tests/two_libs/pylibbar/: CMakeLists.txt  pyproject.toml
tests/two_libs/pylibbar/pylibbar/: __init__.py  pylibbar.c
tests/two_libs/pylibfoo/: CMakeLists.txt  pyproject.toml
tests/two_libs/pylibfoo/pylibfoo/: __init__.py  pylibfoo.c
