[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "native_lib_loader"
version = "0.0.1"
description = "Tools for managing native libraries in Python packages"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Vyas Ramasubramani" },
]
license = { text = "Apache 2.0" }
# TODO: Determine minimum Python version
requires-python = ">=3.9"
