[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "libexample"
version = "0.0.1"

[tool.scikit-build]
cmake.build-type = "Release"
cmake.minimum-version = "3.26.4"
ninja.make-fallback = true
wheel.packages = ["libexample"]
wheel.install-dir = "libexample"
sdist.exclude = ["cpp"]

[project.entry-points."cmake.prefix"]
libexample = "libexample"
