[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "libexample1"
version = "0.0.1"

[tool.scikit-build]
cmake.build-type = "Release"
cmake.minimum-version = "3.26.4"
ninja.make-fallback = true
wheel.packages = ["libexample1"]
wheel.install-dir = "libexample1"
sdist.exclude = ["cpp"]

[project.entry-points."cmake.prefix"]
libexample1 = "libexample1"
