[build-system]
requires = ["scikit-build-core", "libexample1"]
build-backend = "scikit_build_core.build"

[project]
name = "pylibexample1"
version = "0.0.1"
dependencies = ["libexample1"]

[tool.scikit-build]
cmake.build-type = "Release"
cmake.minimum-version = "3.26.4"
ninja.make-fallback = true
wheel.packages = ["pylibexample1"]
sdist.exclude = ["pylibexample1.c"]
