[build-system]
requires = ["scikit-build-core", "libexample2"]
build-backend = "scikit_build_core.build"

[project]
name = "pylibexample2"
version = "0.0.1"
dependencies = ["libexample2"]

[tool.scikit-build]
cmake.build-type = "Release"
cmake.minimum-version = "3.26.4"
ninja.make-fallback = true
wheel.packages = ["pylibexample2"]
sdist.exclude = ["pylibexample2.c"]
