[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "libfoo"
version = "0.0.1"

[tool.scikit-build]
cmake.build-type = "Release"
cmake.minimum-version = "3.26.4"
ninja.make-fallback = true
wheel.packages = ["libfoo"]
wheel.install-dir = "libfoo"
sdist.exclude = ["cpp"]

[project.entry-points."cmake.prefix"]
libfoo = "libfoo"
