[build-system]
requires = ["scikit-build-core", "libfoo"]
build-backend = "scikit_build_core.build"

[project]
name = "pylibfoo"
version = "0.0.1"
dependencies = ["libfoo"]

[tool.scikit-build]
cmake.build-type = "Release"
cmake.minimum-version = "3.26.4"
ninja.make-fallback = true
wheel.packages = ["pylibfoo"]
sdist.exclude = ["pylibfoo.c"]
